# octoscanner

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml
rules/deprecation/: python_deprecation.yaml  python_settings_deprecation.yaml
rules/packaging/: packaging.yaml
rules/removal/: python_removal.yaml  python_settings_removal.yaml  python_signature_change.yaml
rules/security/: security.yaml
src/octoscanner/: __init__.py  __main__.py  downloader.py  models.py  scanner.py
src/octoscanner/cli/: __init__.py  commands.py  formatter.py  main.py
src/octoscanner/generator/: __init__.py  ignored_refs.yaml  ignored_symbols.yaml  models.py  pipeline.py  python_receivers.py  python_utils.py  rules.py
src/octoscanner/generator/analyzers/: __init__.py  base.py  python.py
src/octoscanner/generator/analyzers/python/: analyzer.py  deprecation_extension.py  griffe_walker.py  settings_extractor.py
src/octoscanner/generator/processors/: __init__.py  base.py  python_deprecation.py  python_normalization.py  python_removal.py  python_settings.py  python_settings_removal.py  python_signature_change.py
