[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octoscanner"
version = "0.1.0"
description = "Scanner for OctoPrint plugins"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "packaging>=26.0",
    "rich>=14.0",
    "semgrep>=1.157",
    "setuptools>=82.0",
    "griffe>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
octoscanner = "octoscanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
extend-select = ["I"]
